# fractal

./: CMakeLists.txt  Makefile
inc/: fractol.h
libft/: Makefile
libft/src/: ft_atoi.c  ft_atoi_r.c  ft_bubble_sort.c  ft_bzero.c  ft_capacity.c  ft_clear_table.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_list_len.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstpush.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pstrdel.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  (+29 more)
src/: calculation.c  cl_init.c  draw.c  formulas.c  formulas2.c  initialize.c  loop.c  main.c  zoom.c
